<resources>
    <string name="app_name">Chit Chat</string>
    <string name="desc_back_btn">Go Back</string>
    <string name="desc_save_btn">Save</string>

    //HomeActivity
    <string name="home_activity_desc_logout_btn">Logout</string>
    <string name="home_activity_complete_profile_btn">Complete Profile</string>
    <string name="home_activity_add_chats_btn">Add Chats</string>
    <string name="home_activity_label_fav_chats">Favourite Chats</string>
    <string name="home_activity_label_last_chats">Last Chats</string>
    <string name="home_activity_fab_add_chat">Add Chat</string>
    <string name="home_activity_fab_add_group">Add Group</string>
    <string name="home_activity_fab_close">Close</string>

    //User Details Activity
    <string name="user_details_activity_text_back_btn">Back</string>
    <string name="user_details_activity_desc_profile_photo">Profile Photo</string>
    <string name="user_details_activity_text_set_profile_photo">Set Profile Photo</string>

    <string name="user_details_activity_label_username">Username</string>
    <string name="user_details_activity_text_username">\@%s</string>
    <string name="user_details_activity_label_name">Name</string>
    <string name="user_details_activity_label_bio">Bio</string>
    <string name="user_details_activity_edit_username">Edit Username</string>
    <string name="user_details_activity_edit_name">Edit Name</string>
    <string name="user_details_activity_edit_bio">Edit Bio</string>

    <string name="user_details_activity_no_username">No Username</string>
    <string name="user_details_activity_no_name">No Name</string>
    <string name="user_details_activity_no_bio">No Bio</string>

    //Username Fragment
    <string name="username_fragment_label">Username</string>
    <string name="username_fragment_text_set_username">Set Username</string>
    <string name="username_fragment_instructions">You have to choose a username on Chit Chat in order to be find by the people. People will be able to find you by this username and contact you.\n\nYou can use a–z, 0–9 and underscores. Minimum length is 5 Characters and it has to be unique.\n\nRemember Username can only be set once</string>

    //Name Fragment
    <string name="name_fragment_label">Name</string>
    <string name="name_fragment_text_set_name">Set Name</string>
    <string name="name_fragment_instructions">You have to choose a name on Chit Chat. It will appear on your profile.\n\nYou can use a–z, 0–9 and underscores. Minimum length is 5 Characters</string>

    //Bio Fragment
    <string name="bio_fragment_label">Bio</string>
    <string name="bio_fragment_text_set_bio">Set Bio</string>
    <string name="bio_fragment_instructions">You can add something about yourself. It will appear on your profile. Anyone who visits your profile will be able to see it.</string>

    //Add Chats Activity
    <string name="add_chats_activity_desc_back_btn">Back</string>
    <string name="add_chats_activity_search_hint">Search…</string>
    <string name="add_chats_activity_instructions">Search for people by their username. You can search for multiple people at the same time.</string>

    //Item Add Chats and Add Group Search Result
    <string name="item_add_chat_or_grp_desc_profile_image">Profile Image</string>
    <string name="item_add_chat_or_text_username">%s</string>
    <string name="item_add_chat_or_text_name">Name</string>
    <string name="item_add_chat_or_desc_message_btn">Message</string>

    //Item Home Chat
    <string name="item_home_chat_desc_profile_image">@string/item_add_chat_or_grp_desc_profile_image</string>
    <string name="item_home_chat_text_username">@string/item_add_chat_or_text_username</string>
    <string name="item_home_chat_text_message">Message</string>
    <string name="item_home_chat_text_time">10:00 AM</string>
    <string name="item_home_chat_text_unread_count">2</string>

    //Chatting Activity
    <string name="chatting_activity_desc_back_btn">Back</string>
    <string name="chatting_activity_desc_profile_image">@string/item_add_chat_or_grp_desc_profile_image</string>
    <string name="chatting_activity_text_username">@string/item_add_chat_or_text_username</string>
    <string name="chatting_activity_text_last_seen">Last Seen %s</string>
    <string name="chatting_activity_desc_menu">Menu</string>
    <string name="chatting_activity_desc_browse_image">Browse Image</string>
    <string name="chatting_activity_text_message">Message</string>
    <string name="chatting_activity_desc_send_message">Send Message</string>

    //Chatting Screen Menu
    <string name="chatting_screen_menu_view_contact">View Contact</string>
    <string name="chatting_screen_menu_favorite">Favorite</string>
    <string name="chatting_screen_menu_clear_chat">Clear Chat</string>
    <string name="chatting_screen_menu_delete_chat">Delete Chat</string>

    //Group Chat Screen Menu
    <string name="group_chat_screen_menu_view_details">View Group Details</string>
    <string name="group_chat_screen_menu_exit_group">Exit Group</string>

    //Item Chat
    <string name="item_chat_desc_profile_image">@string/item_add_chat_or_grp_desc_profile_image</string>
    <string name="item_chat_text_message">Hey!!</string>
    <string name="item_chat_text_time">10:00 AM</string>
    <string name="item_chat_desc_image">Image</string>

    //create group dialog
    <string name="create_group_desc_image">Group Image</string>
    <string name="create_group_text_group_name">Group Name</string>

    //Group Chatting Activity
    <string name="group_chat_activity_desc_image">Group Image</string>
    <string name="group_chat_activity_group_name">Group Name</string>
    <string name="group_chat_activity_members">Members</string>
    <string name="group_chat_activity_desc_menu">@string/chatting_activity_desc_menu</string>
    <string name="group_chat_activity_desc_browse_image">@string/chatting_activity_desc_browse_image</string>
    <string name="group_chat_activity_text_message">@string/chatting_activity_text_message</string>
    <string name="group_chat_activity_desc_send_message">@string/chatting_activity_desc_send_message</string>

    //Item Group Chat
    <string name="item_group_chat_group_created">%s created group %s</string>
    <string name="item_group_chat_left_group">%s left group %s</string>

    //User Profile Activity
    <string name="chat_profile_activity_profile_photo">Profile Photo</string>
    <string name="chat_profile_activity_text_username">@string/user_details_activity_label_username</string>
    <string name="chat_profile_activity_label_medias">Medias</string>
    <string name="chat_profile_activity_mute_notifications">Mute Notifications</string>
    <string name="chat_profile_activity_label_groups">Groups in Common</string>
    <string name="chat_profile_activity_no_groups">No Groups</string>
    <string name="chat_profile_activity_label_favourite">@string/chatting_screen_menu_favorite</string>
    <string name="chat_profile_activity_label_clear_chat">@string/chatting_screen_menu_clear_chat</string>
    <string name="chat_profile_activity_label_delete_chat">@string/chatting_screen_menu_delete_chat</string>

    //Group Profile Activity
    <string name="group_profile_activity_profile_photo">@string/chat_profile_activity_profile_photo</string>
    <string name="group_profile_activity_text_username">@string/chat_profile_activity_text_username</string>
    <string name="group_profile_activity_label_medias">@string/chat_profile_activity_label_medias</string>
    <string name="group_profile_activity_mute_notifications">@string/chat_profile_activity_mute_notifications</string>
    <string name="group_profile_activity_mute_notifications_message">Sender Image will be shown in notification in case there is no group image</string>
    <string name="group_profile_activity_label_members">@string/group_chat_activity_members</string>
    <string name="group_profile_activity_label_exit">@string/group_chat_screen_menu_exit_group</string>

    //Image Transition Names
    <string name="chatting_activity_chat_image_transition">chatImageTransition</string>
    <string name="user_details_activity_profile_image_transition">profileImageTransition</string>
    <string name="chat_profile_activity_profile_image_transition">chatProfileImageTransition</string>
    <string name="group_profile_activity_profile_image_transition">groupImageTransition</string>
    <string name="chat_activity_chat_profile_image_transition">chatProfileImageTransition</string>
    <string name="group_chat_activity_group_profile_image_transition">groupChatProfileImageTransition</string>

    //Seen by popup window
    <string name="seen_by_popup_window_title">Seen By</string>
    <string name="seen_by_popup_window_no_one">No One</string>
    <string name="seen_by_popup_window_desc_close">Close Button</string>
</resources>