<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryColor"
        tools:context=".ui.activities.ChatProfileActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/chat_profile_back_btn"
                    style="@style/BackButtonStyle"
                    android:contentDescription="@string/desc_back_btn"
                    android:src="@drawable/ic_arrow_back"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/white" />

                <ImageView
                    android:id="@+id/chat_profile_profile_iv"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/user_details_activity_desc_profile_photo"
                    android:transitionName="@string/chat_profile_activity_profile_image_transition"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/chat_profile_username_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/user_details_activity_text_username"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/chat_profile_name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="16dp"
                    android:text="@string/user_details_activity_label_name"
                    android:textColor="@color/lightGrey"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/chat_profile_bio_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="16dp"
                    android:text="@string/user_details_activity_label_bio"
                    android:textColor="@color/lightGrey"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/home_bg_layout"
                android:orientation="vertical"
                android:paddingTop="24dp">

                <TextView
                    android:id="@+id/chat_profile_media_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/chat_profile_activity_label_medias"
                    android:textColor="@color/darkGrey"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/chat_profile_media_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:clipToPadding="true"
                    android:nestedScrollingEnabled="true"
                    android:orientation="horizontal"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_profile_media" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/chat_profile_no_media_lottie"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/no_photos" />

                <View style="@style/ChatProfileDividerStyle" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/ic_notification"
                        app:tint="@color/fabColor"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:text="@string/chat_profile_activity_mute_notifications"
                        android:textColor="@color/darkGrey" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/chat_profile_mute_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="16dp" />
                </LinearLayout>

                <View style="@style/ChatProfileDividerStyle" />


                <TextView
                    android:id="@+id/chat_profile_groups_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/chat_profile_activity_label_groups"
                    android:textColor="@color/darkGrey"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/chat_profile_groups_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_chat_profile_common_group" />

                <TextView
                    android:id="@+id/chat_profile_no_groups_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/chat_profile_activity_no_groups"
                    android:textColor="@color/lightGrey" />

                <View style="@style/ChatProfileDividerStyle" />

                <TextView
                    android:id="@+id/chat_profile_favorite_btn"
                    style="@style/ChatProfileBottomTvStyle"
                    android:text="@string/chat_profile_activity_label_favourite"
                    android:textColor="@color/fabColor"
                    app:drawableStartCompat="@drawable/ic_favourite"
                    app:drawableTint="@color/fabColor" />

                <TextView
                    android:id="@+id/chat_profile_clear_chat_btn"
                    style="@style/ChatProfileBottomTvStyle"
                    android:text="@string/chat_profile_activity_label_clear_chat"
                    android:textColor="@color/red"
                    app:drawableStartCompat="@drawable/ic_close"
                    app:drawableTint="@color/red" />

                <TextView
                    android:id="@+id/chat_profile_delete_chat_btn"
                    style="@style/ChatProfileBottomTvStyle"
                    android:text="@string/chat_profile_activity_label_delete_chat"
                    android:textColor="@color/red"
                    app:drawableStartCompat="@drawable/ic_delete"
                    app:drawableTint="@color/red" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="32dp" />
            </LinearLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</layout>