<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/homeBackground"
        tools:context=".ui.fragments.NameFragment">

        <ImageView
            android:id="@+id/name_back_btn"
            style="@style/BackButtonStyle"
            android:contentDescription="@string/desc_back_btn"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/textColorPrimary" />

        <TextView
            android:id="@+id/name_label"
            style="@style/ActivityFragmentLabelStyle"
            android:text="@string/name_fragment_label"
            app:layout_constraintBottom_toBottomOf="@+id/name_back_btn"
            app:layout_constraintStart_toEndOf="@+id/name_back_btn"
            app:layout_constraintTop_toTopOf="@+id/name_back_btn" />

        <ImageView
            android:id="@+id/name_save_btn"
            style="@style/BackButtonStyle"
            android:contentDescription="@string/desc_save_btn"
            android:src="@drawable/ic_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/textColorPrimary" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_til"
            style="@style/FragmentTILStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_et"
                style="@style/FragmentEtStyle" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/home_bg_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_til">

            <TextView
                style="@style/FragmentInstructionTvStyle"
                android:text="@string/name_fragment_instructions"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>