<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/item_home_chat_profile_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:contentDescription="@string/item_home_chat_desc_profile_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/item_home_chat_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/item_home_chat_text_username"
            android:textColor="@color/darkGrey"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/item_home_chat_message_time"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@+id/item_home_chat_profile_image"
            app:layout_constraintTop_toTopOf="@+id/item_home_chat_profile_image" />

        <TextView
            android:id="@+id/item_home_chat_message_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/item_home_chat_text_time"
            android:textColor="@color/lightGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/item_home_chat_username" />

        <ImageView
            android:id="@+id/item_home_chat_message_photo"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_photo"
            app:layout_constraintBottom_toBottomOf="@+id/item_home_chat_profile_image"
            app:layout_constraintStart_toStartOf="@+id/item_home_chat_username"
            app:layout_constraintTop_toBottomOf="@+id/item_home_chat_username"
            app:tint="@color/lightGrey"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/item_home_chat_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_home_chat_text_message"
            android:textColor="@color/lightGrey"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/item_home_chat_message_photo"
            app:layout_constraintEnd_toStartOf="@+id/item_home_chat_count_cv"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@+id/item_home_chat_message_photo"
            app:layout_constraintTop_toTopOf="@+id/item_home_chat_message_photo" />

        <androidx.cardview.widget.CardView
            android:id="@+id/item_home_chat_count_cv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="24dp"
            app:cardBackgroundColor="@color/textColorSecondary"
            app:cardCornerRadius="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/item_home_chat_message"
            app:layout_constraintEnd_toEndOf="@+id/item_home_chat_message_time"
            app:layout_constraintTop_toBottomOf="@+id/item_home_chat_message_time">

            <TextView
                android:id="@+id/item_home_chat_count_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="6dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="4dp"
                android:text="@string/item_home_chat_text_unread_count"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>